Tue Nov 13 07:45:25 UTC 2007  J.T. Conklin  <jtc@acorntoolworks.com>

        * configure.ac:

          Add ACE_HAS_INTEL_ASSEMBLY feature test.

Tue Nov 13 06:48:16 UTC 2007  J.T. Conklin  <jtc@acorntoolworks.com>

        * ace/OS_NS_time.inl:

          Changed the inline assembly implementation of gethrtime() for
          the amd64/x86_64 architecture to recognize that the timestamp is
          read into the %eax and %edx registers, and thus must be combined
          into a 64 bit value. Thanks to Nathan Ernst <Nathan dot Ernst at
          citadelgroup dot com > for reporting this bug.

        * THANKS:

          Add Nathan Ernst <Nathan dot Ernst at citadelgroup dot com>.

Tue Nov 13 06:01:33 UTC 2007  J.T. Conklin  <jtc@acorntoolworks.com>

        * ace/OS_NS_stdio.inl:

          Change of Thu Nov  8 04:02:21 UTC 2007 was missing ACE_WIN32
          in conditional.  Thanks to Johnny Willemsen for pointing out
          resulting scoreboard failures.

Mon Nov 12 20:05:21 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/tao_orb_tests.lst:
          Enabled Smart_Proxies/Policy with VxWorks

Mon Nov 12 14:16:21 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Log_Msg.{h,cpp,inl}:
          Use bool for several flags

Mon Nov 12 14:12:21 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/tao_orb_tests.lst:
          Disable Bug_2953_Regression for the moment on VxWorks, it hangs out
          target

Mon Nov 12 13:04:11 UTC 2007  J.T. Conklin  <jtc@acorntoolworks.com>

        * ace/CDR_Base.inl:

          Take advantage of bswap16, bswap32, and bswap64 macros when
          ACE_HAS_BSWAPXX is defined as we do for bswap_16, bswap_32,
          and bswap_64 when ACE_HAS_BSWAP_XX is defined.

        * configure.ac:

          Changed checks for bswap_16, bswap_32, and bswap_64 to use
          ACE_CHECK_HAS_DEFINES.  Thanks to Thomas Girard <thomas dot g