@@ -1,3 +1,12 @@
+Tue Nov 13 14:34:17 UTC 2007  J.T. Conklin  <jtc@acorntoolworks.com>
+
+        * configure.ac:
+        * m4/config_h.m4:
+
+          Replace autoheader templates for ACE_HAS_ALPHA_TIMER,
+          ACE_HAS_POWERPC_TIMER, and ACE_HAS_PENTIUM in config_h.m4 with
+          a third argument to AC_DEFINE in configure.ac
+
 Tue Nov 13 07:45:25 UTC 2007  J.T. Conklin  <jtc@acorntoolworks.com>
 
         * configure.ac:
